pawn turning figure

--- a/index.html
+++ b/index.html
@@ -16,6 +16,18 @@
   </head>
   <body>
     <section></section>
+
+    <label for="figures"
+      >Choose a Figure:
+      <br />
+      <select id="figures" name="figures">
+        <option value="Queen">Queen</option>
+        <option value="Bishop">Bishop</option>
+        <option value="Knight">Knight</option>
+        <option value="Rook">Rook</option>
+      </select>
+      <button>OK</button>
+    </label>
     <script src="main.js" type="module"></script>
   </body>
 </html>
